--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ilanguage_wallpaper"
+    android:background="@drawable/principal_wallpaper"
 
     tools:context=".login">
 
@@ -12,9 +12,15 @@
         android:id="@+id/btn_signup"
         android:layout_width="331dp"
         android:layout_height="59dp"
-        android:text="Sign Up"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="599dp" />
+        android:layout_marginTop="24dp"
+
+        android:text="@string/sign_up"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
+        app:layout_constraintVertical_bias="0.098" />
 
     <TextView
         android:id="@+id/textView"
@@ -23,26 +29,43 @@
         android:text="@string/ilanguage"
         android:textColor="@color/white"
         android:textSize="64sp"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.044" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="241dp"
         android:layout_height="176dp"
+        android:layout_marginTop="44dp"
         android:text="@string/make_a_conversation_improve_your_language"
         android:textColor="@color/white"
-        android:textSize="32sp"
 
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="220dp" />
+        android:textSize="32sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_signin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.235"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.13" />
 
     <Button
         android:id="@+id/btn_signin"
         android:layout_width="331dp"
         android:layout_height="59dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="208dp"
         android:text="Sign In"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="516dp" />
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.897"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
