feature: add function to change activity description: add funciton to change to profile activity to main menu TODO: change de main activity to launche

--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/itemProfile"
+        android:onClick="GoToProfile"
         android:title="@string/profile" />
     <item
         android:id="@+id/itemLogOut"
