--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="143dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -34,21 +34,21 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvDescription"
         android:layout_width="317dp"
         android:layout_height="74dp"
         android:layout_marginBottom="312dp"
-        android:text="@string/textview"
+        android:text="@string/texto_de_ejemplo_de_desciption"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvInterest"
         android:layout_width="317dp"
         android:layout_height="74dp"
         android:layout_marginBottom="188dp"
-        android:text="@string/textview"
+        android:text="@string/texto_de_ejemplo_de_interest"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -58,10 +58,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="47dp"
+        android:layout_marginTop="50dp"
         android:layout_marginBottom="4dp"
         android:text="@string/description"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
 
     <TextView
         android:id="@+id/textView5"
@@ -71,9 +73,9 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="4dp"
         android:text="@string/interest"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintBottom_toTopOf="@+id/tvInterest"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
     <Button
         android:id="@+id/button"
@@ -83,5 +85,5 @@
         android:layout_marginTop="85dp"
         android:text="@string/edit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/tvInterest" />
 </androidx.constraintlayout.widget.ConstraintLayout>
