--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -13,14 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="140dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="143dp"
+        android:src="@drawable/ic_baseline_account_circle_24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ImageContrastCheck"
-        tools:src="@tools:sample/avatars" />
+        tools:src="@drawable/ic_baseline_account_circle_24" />
 
     <TextView
         android:id="@+id/tvProfileName"
@@ -37,7 +38,7 @@
         android:id="@+id/tvDescription"
         android:layout_width="317dp"
         android:layout_height="74dp"
-        android:layout_marginBottom="312dp"
+        android:layout_marginBottom="304dp"
         android:text="@string/texto_de_ejemplo_de_desciption"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +48,7 @@
         android:id="@+id/tvInterest"
         android:layout_width="317dp"
         android:layout_height="74dp"
-        android:layout_marginBottom="188dp"
+        android:layout_marginBottom="176dp"
         android:text="@string/texto_de_ejemplo_de_interest"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,32 +58,30 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="11dp"
         android:text="@string/description"
         app:layout_constraintBottom_toTopOf="@+id/tvDescription"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvProfileName" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="4dp"
+        android:layout_width="53dp"
+        android:layout_height="19dp"
+        android:layout_marginBottom="11dp"
         android:text="@string/interest"
         app:layout_constraintBottom_toTopOf="@+id/tvInterest"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.15"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="68dp"
         android:text="@string/edit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvInterest" />
