--- a/app/src/main/res/layout/activity_login_inputs.xml
+++ b/app/src/main/res/layout/activity_login_inputs.xml
@@ -6,130 +6,4 @@
     android:layout_height="match_parent"
     android:background="@drawable/signup_wallpaper"
 
-    tools:context=".login_inputs">
-
-    <Button
-        android:id="@+id/btn_signin3"
-        android:layout_width="349dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="40dp"
-        android:text="Sign In"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view_login"
-        app:layout_constraintVertical_bias="0.168" />
-
-    <View
-        android:id="@+id/view_login"
-        android:layout_width="350dp"
-        android:layout_height="450dp"
-        android:background="#C12D9CDB"
-        android:backgroundTintMode="src_over"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.37" />
-
-    <TextView
-        android:id="@+id/login_title"
-        android:layout_width="162dp"
-        android:layout_height="65dp"
-        android:text="Login"
-        android:textColor="@color/white"
-        android:textSize="50dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view_login"
-        app:layout_constraintEnd_toEndOf="@+id/view_login"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintStart_toStartOf="@+id/view_login"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.281" />
-
-    <ImageView
-        android:id="@+id/back_image"
-        android:layout_width="37dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="36dp"
-        android:background="#2D9CDB"
-        android:clickable="true"
-        android:contentDescription="Return to "
-        app:layout_constraintBottom_toTopOf="@+id/view_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.084"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_revert"
-        app:tintMode="add" />
-
-    <EditText
-        android:id="@+id/input_email"
-        android:layout_width="305dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginBottom="269dp"
-        android:backgroundTint="#FFFFFF"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="@+id/view_login"
-        app:layout_constraintEnd_toEndOf="@+id/view_login"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintStart_toStartOf="@+id/view_login"
-        app:layout_constraintTop_toBottomOf="@+id/login_title" />
-
-    <TextView
-        android:id="@+id/email_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/input_email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_title"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/password_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Password"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/input_password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.148"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_text"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="146dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/input_password"
-        app:layout_constraintEnd_toEndOf="@+id/input_password"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/input_password"
-        app:layout_constraintTop_toTopOf="@+id/input_password"
-        app:passwordToggleEnabled="true">
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/input_password"
-        android:layout_width="306dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="56dp"
-        android:backgroundTint="#FFFFFF"
-        android:password="true"
-        app:layout_constraintBottom_toBottomOf="@+id/view_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.457"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_email"
-        app:layout_constraintVertical_bias="0.0" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".login_inputs"/>
