--- a/app/src/main/res/layout/activity_select_signup.xml
+++ b/app/src/main/res/layout/activity_select_signup.xml
@@ -124,7 +124,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/student"
+                    android:text="Teacher"
                     android:textAppearance="?attr/textAppearanceHeadline6" />
 
             </LinearLayout>
@@ -138,11 +138,14 @@
         android:id="@+id/textView5"
         android:layout_width="321dp"
         android:layout_height="78dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/choose_your_role_to_get_started"
         android:textColor="@color/white"
         android:textColorLink="#000000"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="550dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_student" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
