--- a/app/src/main/res/layout/activity_details_personal.xml
+++ b/app/src/main/res/layout/activity_details_personal.xml
@@ -77,7 +77,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/filledTextField2"
+        android:id="@+id/email_login"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
@@ -120,7 +120,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/LanguageField"
+        android:id="@+id/password_login"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20656464"
