--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -34,7 +34,7 @@
         android:id="@+id/imageView2"
         android:layout_width="164dp"
         android:layout_height="130dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/todo"
         app:layout_constraintBottom_toBottomOf="@+id/background1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -91,7 +91,6 @@
         android:layout_width="347dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:autofillHints=""
         android:ems="10"
         android:hint="@string/hint_full_name"
         android:inputType="textPersonName"
