--- a/app/src/main/res/layout/activity_details_signup.xml
+++ b/app/src/main/res/layout/activity_details_signup.xml
@@ -59,7 +59,7 @@
         android:id="@+id/input_description"
         android:layout_width="314dp"
         android:layout_height="55dp"
-        android:hint="Full name"
+        android:hint="Name"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +68,7 @@
         app:layout_constraintVertical_bias="0.26">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nameInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
@@ -80,7 +81,7 @@
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
-        android:hint="Email"
+        android:hint="Last  Name"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +90,7 @@
         app:layout_constraintVertical_bias="0.38">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/lastNameInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#1B656464"
@@ -97,11 +99,11 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/filledTextField3"
+        android:id="@+id/filledTextField5"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
-        android:hint="DNI"
+        android:hint="Email"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +112,7 @@
         app:layout_constraintVertical_bias="0.51">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/emailInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
@@ -135,6 +138,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
@@ -143,29 +147,31 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/filledTextField5"
+        android:id="@+id/filledTextField10"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
-        android:hint="@string/confirm_password"
+        android:hint="Confirm Password"
         android:inputType="textPassword"
+
 
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:endIconMode="password_toggle"
         app:layout_constraintTop_toTopOf="parent"
+        app:endIconMode="password_toggle"
         app:layout_constraintVertical_bias="0.73">
 
-
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordConfirmInputText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
             android:minHeight="48dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <TextView
         android:id="@+id/textView7"
