--- a/app/src/main/res/layout/activity_details_signup.xml
+++ b/app/src/main/res/layout/activity_details_signup.xml
@@ -56,7 +56,7 @@
         app:tintMode="add" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_description"
+        android:id="@+id/nameHint"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:hint="Name"
@@ -72,12 +72,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_login"
+        android:id="@+id/birthdateHint"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
@@ -94,12 +95,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#1B656464"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/filledTextField5"
+        android:id="@+id/emailInputHint"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
@@ -112,16 +114,17 @@
         app:layout_constraintVertical_bias="0.51">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/emailInputText"
+            android:id="@+id/emailInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_login"
+        android:id="@+id/select_language"
         android:layout_width="314dp"
         android:layout_height="55dp"
         android:backgroundTint="#20100F0F"
@@ -142,7 +145,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -168,22 +172,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#20656464"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"
+            android:singleLine="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="116dp"
         android:text="Create an Account"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/input_description"
+        app:layout_constraintBottom_toTopOf="@+id/descriptionHint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.228"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.763" />
+        app:layout_constraintVertical_bias="0.52" />
 </androidx.constraintlayout.widget.ConstraintLayout>
