--- a/app/src/main/res/layout/activity_profile_view.xml
+++ b/app/src/main/res/layout/activity_profile_view.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/tvInterest"
+        android:id="@+id/tvLanguage"
         android:layout_width="317dp"
         android:layout_height="74dp"
         android:layout_marginBottom="176dp"
@@ -67,11 +67,11 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="53dp"
-        android:layout_height="19dp"
+        android:layout_width="82dp"
+        android:layout_height="22dp"
         android:layout_marginBottom="11dp"
-        android:text="@string/interest"
-        app:layout_constraintBottom_toTopOf="@+id/tvInterest"
+        android:text="@string/languages"
+        app:layout_constraintBottom_toTopOf="@+id/tvLanguage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.15"
         app:layout_constraintStart_toStartOf="parent" />
@@ -85,5 +85,5 @@
         android:text="@string/edit"
         android:textColor="#3E2723"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvInterest" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
